28-06 22=13 push